--- a/PacemakerEpisodeStatistics/app/src/main/res/values/strings.xml
+++ b/PacemakerEpisodeStatistics/app/src/main/res/values/strings.xml
@@ -8,4 +8,18 @@
     <string name="amount">Amount:</string>
     <string name="percent">Percentage:</string>
     <string name="graph">See graph</string>
+
+    <string name ="jan">January</string>
+    <string name ="feb">February</string>
+    <string name ="mar">March</string>
+    <string name ="apr">April</string>
+    <string name ="may">May</string>
+    <string name ="jun">June</string>
+    <string name ="jul">July</string>
+    <string name ="aug">August</string>
+    <string name ="sep">September</string>
+    <string name ="oct">October</string>
+    <string name ="nov">November</string>
+    <string name ="dec">December</string>
+
 </resources>
