--- a/PacemakerEpisodeStatistics/app/src/main/res/values-da/strings.xml
+++ b/PacemakerEpisodeStatistics/app/src/main/res/values-da/strings.xml
@@ -6,16 +6,16 @@
     <string name="graph">Se graf</string>
     <string name="percent">Procent:</string>
 
-    <string name ="jan">Januar</string>
-    <string name ="feb">Februar</string>
-    <string name ="mar">Marts</string>
-    <string name ="apr">April</string>
+    <string name ="jan">Jan</string>
+    <string name ="feb">Feb</string>
+    <string name ="mar">Mar</string>
+    <string name ="apr">Apr</string>
     <string name ="may">Maj</string>
-    <string name ="jun">Juni</string>
-    <string name ="jul">Juli</string>
-    <string name ="aug">August</string>
-    <string name ="sep">September</string>
-    <string name ="oct">Oktober</string>
-    <string name ="nov">November</string>
-    <string name ="dec">December</string>
+    <string name ="jun">Jun</string>
+    <string name ="jul">Jul</string>
+    <string name ="aug">Aug</string>
+    <string name ="sep">Sep</string>
+    <string name ="oct">Okt</string>
+    <string name ="nov">Nov</string>
+    <string name ="dec">Dec</string>
 </resources>
