--- a/PacemakerEpisodeStatistics/app/src/main/res/values/strings.xml
+++ b/PacemakerEpisodeStatistics/app/src/main/res/values/strings.xml
@@ -13,6 +13,10 @@
     <string name="texttwo">Transmissions</string>
     <string name="textthree">Transmission %</string>
 
+    <string name="pictureBtn">Pictures</string>
+    <string name="closePicBtn">Close pictures</string>
+    <string name="seepicz">See pictures</string>
+
 
     <string name ="jan">January</string>
     <string name ="feb">February</string>
