--- a/PacemakerEpisodeStatistics/app/src/main/res/values-da/strings.xml
+++ b/PacemakerEpisodeStatistics/app/src/main/res/values-da/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">PacemakerEpisodeStatistics</string>
+    <string name="app_name">Pacemaker data</string>
     <string name="amount">Antal:</string>
     <string name="episode_type">Episodetype:</string>
     <string name="graph">Se graf</string>
